# 2024-P1-alw0ng

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
