[tool.poetry]
name = "2024-p1-alw0ng"
version = "0.1.0"
description = ""
authors = ["Alvaro Wong <110513715+alw0ng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
